# ntrck

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.sh
samples/: README.md
samples/presets/: default.json
server/: Cargo.toml
server/src/: main.rs
static/: app.js  index.html  styles.css
wasm/: Cargo.toml
wasm/src/: audio.rs  lib.rs  patterns.rs  sequencer.rs
