[workspace]
members = [
    "wasm",
    "server"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ntrck developers"]
description = "A low-level, high-performance music tracker web app"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4" 