[package]
name = "ntrck-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "GainNode",
    "OscillatorNode",
    "AudioParam",
    "AudioWorklet",
    "AudioWorkletProcessor",
    "AudioWorkletGlobalScope",
    "AudioDestinationNode",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Event",
    "EventTarget",
    "MessageEvent",
    "console"
]}

# Audio processing
dasp = "0.11"
dasp_signal = "0.11"
dasp_ring_buffer = "0.11"

# Math and utilities
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
